--- a/movies-app/src/app/modules/main/add-entry/add-entry.component.html
+++ b/movies-app/src/app/modules/main/add-entry/add-entry.component.html
@@ -29,18 +29,23 @@
                     <label>IMDB Link</label>
                     <input matInput formControlName="imdb" type="text" class="form-control" [ngClass]="{ 'is-invalid': form.controls.imdb?.errors }"/>
                     <div class="text-danger" *ngIf="form.controls.imdb?.errors?.required">IMDB Link is required</div>
+                    <div class="text-danger" *ngIf="form.controls.imdb?.errors?.notIMDBLink">Not a valid IMDB link</div>
                 </div>
                 <div class="form-group">
-                    <label>Other Link</label>
-                    <input matInput formControlName="link" type="text" class="form-control" [ngClass]="{ 'is-invalid': form.controls.link?.errors }"/>
-                    <div class="text-danger" *ngIf="form.controls.link?.errors?.required">Other Link is required</div>
+                    <label>Poster Link</label>
+                    <input matInput formControlName="poster" type="text" class="form-control" (change)="imageChange($event)" [ngClass]="{ 'is-invalid': form.controls.poster?.errors || !image_valid }"/>
+                    <div class="text-danger" *ngIf="form.controls.poster?.errors?.required">Poster Link is required</div>
+                    <div class="text-danger" *ngIf="!form.controls.poster?.errors?.required && !image_valid">Not a valid poster link</div>
                 </div>
+                <ng-container *ngIf="!form.controls.poster?.errors?.required">
+                    <img class="image-preview" [src]="form.controls.poster.value" (error)="imageError($event)" (load)="imageLoaded($event)">
+                </ng-container>
             </form>
         </div>
         
         <div mat-dialog-actions align="end">
             <button class="btn btn-cancel" (click)="close(null)"><mat-icon svgIcon="x" aria-hidden="false"></mat-icon>Cancel</button>
-          <button class="btn btn-primary" [disabled]="!form.valid" (click)="submit()" cdkFocusInitial><mat-icon svgIcon="check" aria-hidden="false"></mat-icon>Add</button>
+          <button class="btn btn-primary" [disabled]="!form.valid || !image_valid" (click)="submit()" cdkFocusInitial><mat-icon svgIcon="check" aria-hidden="false"></mat-icon>Add</button>
         </div>
     </ng-container>
     <ng-container *ngIf="sending">
