--- a/movies-app/src/app/modules/main/report/report.component.scss
+++ b/movies-app/src/app/modules/main/report/report.component.scss
@@ -2,3 +2,26 @@
     background: #000;
     color: #fff;
 }
+.movie{
+    border: 1px solid;
+    position: relative;
+    display: flex;
+    .movie-poster-holder{
+        width: 100px;
+        height: 150px;
+        display: inline-flex;
+    }
+    .movie-content{
+        width: calc(100% - 100px);
+        display: inline-flex;
+    }
+    .delete-button{
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        padding: 0px;
+        width: 20px;
+        height: 25px;
+        border-radius: 10px;
+    }
+}
