--- a/movies-app/src/styles.scss
+++ b/movies-app/src/styles.scss
@@ -15,3 +15,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     display: inline-block;
     margin-right: 10px;
 }
+@media only screen and (min-width: 1024px) {
+
+}
+@media only screen and (max-width: 1024px) {
+    .mobile-hide{
+      display: none;
+    }
+    .mobile-full{
+      flex: 0 0 100% !important;
+      max-width: 100% !important;
+    }
+}
