--- a/movies-app/src/app/modules/main/add-entry/add-entry.component.html
+++ b/movies-app/src/app/modules/main/add-entry/add-entry.component.html
@@ -44,8 +44,8 @@
         </div>
         
         <div mat-dialog-actions align="end">
-            <button class="btn btn-cancel" (click)="close(null)"><mat-icon svgIcon="x" aria-hidden="false"></mat-icon>Cancel</button>
-          <button class="btn btn-primary" [disabled]="!form.valid || !image_valid" (click)="submit()" cdkFocusInitial><mat-icon svgIcon="check" aria-hidden="false"></mat-icon>Add</button>
+            <button class="btn btn-cancel" (click)="close(null)"><mat-icon class="mx-2" svgIcon="x" aria-hidden="false"></mat-icon>Cancel</button>
+          <button class="btn btn-primary" [disabled]="!form.valid || !image_valid" (click)="submit()" cdkFocusInitial><mat-icon class="mx-2" svgIcon="check" aria-hidden="false"></mat-icon>Add</button>
         </div>
     </ng-container>
     <ng-container *ngIf="sending">
