--- a/movies-app/src/app/modules/main/report/report.component.html
+++ b/movies-app/src/app/modules/main/report/report.component.html
@@ -6,17 +6,28 @@
     <div class="text-center"><a routerLink="/auth/login">Log In</a></div>
 </ng-container>
 <ng-container *ngIf="loaded && authorized">
-    <div class="mb-3 pb-3 border-bottom">
+    <div class="mb-3 mobile-only border-bottom">
         <div class="container">
+            <mat-icon class="icon-clickable my-3 mx-1" svgIcon="hamburger" aria-hidden="false" (click)="sidebar_open = true"></mat-icon>
         </div>
     </div>
-    <div class="container">
+    <div class="mobile-only mobile-sidebar-mask" [ngClass]="{'open':sidebar_open}" (click)="sidebar_open = false"></div>
+    <div class="mobile-only mobile-sidebar p-3" [ngClass]="{'open':sidebar_open}">
+        <button class="btn btn-primary w-100 mb-3" (click)="openNewEntryDialog()">
+            Add new movie
+        </button>
+        <div class="category p-3" [ngClass]="{'active':category == cat}" (click)="openCategory(null)">All</div>
+        <ng-container *ngFor="let cat of categories">
+            <div class="category p-3" [ngClass]="{'active':category == cat}" (click)="openCategory(cat)">{{cat}}</div>
+        </ng-container>
+    </div>
+    <div class="container pt-3">
         <div class="row">
-            <div class="col-3">
+            <div class="col-3 mobile-hide">
                 <div class="header">
-                    Welcome, {{user.name}}
+                    <h3>Welcome, {{user.name}}</h3>
                 </div>
-                <button class="btn btn-primary w-100" (click)="openNewEntryDialog()">
+                <button class="btn btn-primary w-100 mb-3" (click)="openNewEntryDialog()">
                     Add new movie
                 </button>
                 <div class="category p-3" [ngClass]="{'active':category == cat}" (click)="openCategory(null)">All</div>
@@ -24,7 +35,7 @@
                     <div class="category p-3" [ngClass]="{'active':category == cat}" (click)="openCategory(cat)">{{cat}}</div>
                 </ng-container>
             </div>
-            <div class="col-9">
+            <div class="col-9 mobile-full">
                 <h1>Movies</h1>
                 <div class="row">
                     <ng-container *ngFor="let entry of entries">
@@ -38,7 +49,7 @@
                                         {{entry.title}}<br>
                                         {{entry.category}}
                                     </div>
-                                    <button class="btn btn-danger delete-button" (click)="deleteEntry(entry)">X</button>
+                                    <button class="btn btn-danger delete-button" (click)="deleteEntry(entry)"><mat-icon svgIcon="x" aria-hidden="false"></mat-icon></button>
                                 </div>
                             </div>
                         </ng-container>
