--- a/movies-app/src/app/modules/main/report/report.component.scss
+++ b/movies-app/src/app/modules/main/report/report.component.scss
@@ -2,6 +2,35 @@
     background: #000;
     color: #fff;
 }
+.mobile-sidebar{
+    position: fixed;
+    height: 100%;
+    width: 80%;
+    top: 0;
+    right: -100%;
+    background: #fff;
+    z-index: 100;
+    transition: all 0.3s;
+}
+.mobile-sidebar.open{
+    right: 0;
+}
+.mobile-sidebar-mask{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ccc;
+    opacity: 0;
+    z-index: 99;
+    transition: all 0.3s;
+    pointer-events: none;
+}
+.mobile-sidebar-mask.open{
+    opacity: 0.75;
+    pointer-events: all;
+}
 .movie{
     border: 1px solid;
     position: relative;
@@ -20,8 +49,11 @@
         top: 5px;
         left: 5px;
         padding: 0px;
-        width: 20px;
-        height: 25px;
-        border-radius: 10px;
+        padding-bottom: 2px;
+        border-radius: 30px;
+        svg{
+            width: 12px;
+            height: 12px;
+        }
     }
 }
