--- a/movies-app/src/styles.scss
+++ b/movies-app/src/styles.scss
@@ -2,6 +2,7 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -16,7 +17,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-right: 10px;
 }
 @media only screen and (min-width: 1024px) {
-
+    .mobile-only{
+        display: none;
+    }
 }
 @media only screen and (max-width: 1024px) {
     .mobile-hide{
